refactor(restful): 重构代码结构和优化实现细节
- 移除无用的java.awt.*导入并重新排序import语句
- 将org.jspecify.annotations.NonNull从顶部移至底部import区域
- 为actionPerformed和update方法添加@NotNull注解以增强类型安全
- 使用Collections.addAll替代循环添加元素到列表中
- 删除未使用的getPsiClass方法减少代码冗余
- 在EndpointIndex中将expireWith参数从myProject改为this
- 替换硬编码字符串"复制成功"为国际化资源绑定
- 添加缺失的import语句如Objects、NotNull等
- 简化字符串拼接操作使用直接连接替代StringBuilder
- 修复getServerPort方法逻辑使用getProperty统一处理
- 重命名方法loadProertiesFromConfigFile为loadPropertiesFromConfigFile修正拼写错误
- 为JaxrsAnnotationHelper中的modifierList添加空值检查
- 优化Arrays.stream操作使用方法引用替代lambda表达式
- 将多个枚举类中的字段声明为final类型
- 修正plugin.xml中Convert to bulk value描述大小写格式
- 为PopupChoiceAction添加getActionUpdateThread方法实现
- 移除PropertiesHandler中未使用的常量定义
- 优化MethodHelper中的isRestController方法提前返回避免空指针异常